# TypeTreeGeneratorAPI

./: .gitignore  .gitmodules  README.md  TypeTreeGeneratorAPI.sln
.github/workflows/: release_python.yml  test.yml
TypeTreeGeneratorAPI/: NativeAPI.cs  NatriveAPI.cs  TypeTreeGenerator.cs  TypeTreeGeneratorAPI.csproj  TypeTreeGenerator_AssetStudio.cs  TypeTreeGenerator_AssetsTools.cs  TypeTreeNodeSerializer.cs
TypeTreeGeneratorAPI/AssetStudioUtility/: MyAssemblyResolver.cs  SerilizedTypeHelper.cs  TypeDefinitionConverter.cs  TypeTreeNode.cs
TypeTreeGeneratorAPI/TypeTreeGenerator/: Il2CppHandler.cs  MonoCecilResolver.cs  TypeTreeGenerator.cs  TypeTreeGeneratorHandle.cs  TypeTreeNode.cs
TypeTreeGeneratorAPI/TypeTreeGenerator/AssetRipper/: AssetRipper.cs  SerializableTypeConverter.cs
TypeTreeGeneratorAPI/TypeTreeGenerator/AssetStudio/: AssetStudioGenerator.cs
TypeTreeGeneratorAPI/TypeTreeGenerator/AssetStudio/AssetStudioUtility/: LICENSE  SerilizedTypeHelper.cs  TypeDefinitionConverter.cs  UnitySerializationLogic.cs
TypeTreeGeneratorAPI/TypeTreeGenerator/AssetsTools/: AssetsToolsGenerator.cs  MonoBehaviourTemplateGeneratorPatch.cs
TypeTreeGeneratorCLI/: Program.cs  TypeTreeGeneratorCLI.csproj
TypeTreeGeneratorCLI/Properties/: launchSettings.json
bindings/python/: .gitignore  README.md  TypeTreeGenerator.py  pyproject.toml  ruff.toml  setup.py
bindings/python/TypeTreeGeneratorAPI/: TypeTreeGenerator.py  __init__.py
